--- a/css/custom.css
+++ b/css/custom.css
@@ -4,7 +4,7 @@ body {
 
 /* TYPOGRAPHY */
 p, ul, ol {
-  margin: 0 0 1em 0;
+  margin: 0 0 15px 0;
 }
 
 ul ol, ul ul, ol ol, ol ul {
@@ -22,7 +22,7 @@ header nav ul li {
 
 /* CONTENT */
 section {
-  margin: 1em 0;
+  margin: 15px 0;
 }
 
 code {
@@ -62,7 +62,7 @@ footer {
   border-top: 1px solid #cccccc;
   min-height: 65px;
   margin-top: 30px;
-  padding: 1em 0;
+  padding: 15px 0;
 }
 footer h2 {
   font-size: 1em;
@@ -106,7 +106,7 @@ footer a:visited {
     display: block;
     font-family: "Open Sans", sans-serif;
     font-size: 1em;
-    padding: 1em 0;
+    padding: 15px 0;
     text-indent: 10px;
   }
   .mobile .menuIcon {
