New 3.3 Sass files - removed Compass dependencies and cleaned up mixins to be more semantic in location within the files

--- a/sass/core/_base.sass
+++ b/sass/core/_base.sass
@@ -1,8 +1,8 @@
+@import "mixins"
+
 @import "alerts"
 @import "breadcrumbs"
 @import "buttons"
-@import "colors"
-@import "clearfix"
 @import "grid"
 @import "images"
 @import "navigation"
@@ -14,30 +14,3 @@
 @import "tooltips"
 @import "typography"
 @import "vars"
-
-@mixin extendables  
-  %noMarPad
-    margin: 0
-    padding: 0
-  
-  %absolute
-    position: absolute
-    
-  %relative
-    position: relative
-
-  %noTextDecoration
-    text-decoration: none
-  
-  %cursor
-    cursor: pointer
-  
-  %auto-center
-    margin-left: auto
-    margin-right: auto
-    
-  %float-left
-    float: $lang-front
-  
-  %float-right
-    float: $lang-back
