--- a/sass/core/_typography.sass
+++ b/sass/core/_typography.sass
@@ -1,43 +1,5 @@
-@import "compass/typography/text/"
-@import "vars"
-
-
-
-//@mixin default-heading($color, $size)
-//  color: $color
-//  display: block
-//  font-family: $heading-font
-//  font-size: $size
-//  line-height: $line-height
-
-
-// Headings
-//@mixin heading($size, $margin-height, $color: $text-color)
-//  @include default-heading($color, $size)
-//  font-weight: bold
-//  margin: $margin-height 0
-
-//@mixin header-headings($size, $color)
-//  @include default-heading($color, $size)
-//  font-weight: normal
-//  margin: 10px 0
-
-// Margin
-$dh-margin: 1em 0
-$dw-margin: 0 1em
-$d-margin: 1em
-$no-margin: 0
-$b-margin: 0 0 1em 0
-
-// Padding
-$dh-padding: 1em 0
-$dw-padding: 0 1em
-$d-padding: 1em
-$no-padding: 0
-$b-padding: 0 0 1em 0
-
 body
-  font-size: $body-font-size
+  font-size: 15px
 
 // Default links
 @mixin links($change-link-color: $link-color, $change-hover-color: $link-hover-color)
