--- a/sass/core/_vars.sass
+++ b/sass/core/_vars.sass
@@ -1,16 +1,56 @@
+// COLOR              TOP     BOTTOM
 
-// Font
-$body-font-size: 15px
+// Black          -   #7d7e7d   #0e0e0e
+// Black:hover    -   #9b9b9b   #3d3d3d
+
+// grey           -   #ffffff   #e5e5e5
+// grey:hover     -   #ffffff   #b7b7b7
+
+// blue           -   #a7cfdf   #23538a
+// blue:hover     -   #a7cfdf   #004089
+
+// red            -   #ff3019   #cf0404
+// red:hover      -   #ff3819   #aa0303
+
+// yellow         -   #fced62   #febf04
+// yellow:hover   -   #fced62   #ffaa00
+
+// orange         -   #ffa84c   #ff7b0d
+// orange:hover   -   #ffa84c   #fc6000
+
+// green          -   #a4b357   #75890c
+// green:hover    -   #a4b357   #5b7a00
+
+
+// Font Size
 $default-font-size: 1em
 $small-font-size: .8em
 
+// font-family
 $text-font: 'Open Sans', sans-serif
 $heading-font: 'Open Sans Condensed', sans-serif
 $line-height: 1.5
 
+
+// Colors
+// Default Colors
+$default: rgba(#333333, 1.0)
+$text-color: rgba(#555555, 1.0)
+
+
+$white: rgba(#FFFFFF, 1.0)
+$black: rgba(#000000, 1.0)
+
 $almost-white: rgba(#EDEDED, 1.0)
 $grey: rgba(#CCCCCC, 1.0)
 $lightgrey: rgba(#999999, 1.0)
+
+
+$red: #ff3019
+$yellow: #febf04
+$blue: #a7cfdf
+$green: #a4b357
+
 
 // Links
 $link-color: rgba(#ffa84c, 1.0)
@@ -20,6 +60,23 @@ $link-hover-color: rgba(#000000, 1.0)
 $border-color: rgba(#CCCCCC, 1.0)
 $border-color-light: rgba(#EDEDED, 1.0)
 
+
+// Margin
+$dh-margin: 15px 0
+$dw-margin: 0 15px
+$d-margin: 15px
+$no-margin: 0
+$b-margin: 0 0 15px 0
+
+
+// Padding
+$dh-padding: 15px 0
+$dw-padding: 0 15px
+$d-padding: 15px
+$no-padding: 0
+$b-padding: 0 0 15px 0
+
+$table-pad: 5px 10px
 
 @mixin extendables  
   %noMarPad
@@ -43,7 +100,7 @@ $border-color-light: rgba(#EDEDED, 1.0)
     margin-right: auto
     
   %float-left
-    float: $lang-front
+    float: left
   
   %float-right
-    float: $lang-front
+    float: right
