--- a/css/centurion.css
+++ b/css/centurion.css
@@ -7,7 +7,7 @@ body {
  *  Centurion Framework v 3.3
  *  Created by: Justin Hough
  *
- *  Documentation: http://jhough10.github.com/Centurion/documentation.html
+ *  Documentation: http://jhough10.github.com/Centurion/get-started.html
  *  Licensed under GPL and MIT.
  *
  * -------------------------------------------------------- */
@@ -239,7 +239,7 @@ body {
 .container .push-66 {
   left: 66.66667%;
 }
-.container .centerGrid {
+.container .center-grid {
   display: block;
   float: none;
   margin-left: auto;
@@ -263,7 +263,7 @@ body {
     padding: 0;
     margin: 0;
   }
-  .container .centerGrid {
+  .container .center-grid {
     display: block;
     float: none;
     margin-left: auto;
@@ -301,7 +301,7 @@ body {
   }
 }
 /* Centering Grid */
-.centerGrid {
+.center-grid {
   display: block;
   float: none;
   margin-left: auto;
