changed 'centerGrid' class to 'center-grid'

--- a/sass/core/_grid.sass
+++ b/sass/core/_grid.sass
@@ -5,7 +5,7 @@ $lang-back: right
 // Center Grid
 // @include centerGrid
 @mixin centerGrid
-  .centerGrid
+  .center-grid
     display: block
     float: none
     @include auto-center
