updated documentation link and changed "centerGrid" to "center-grid"

--- a/sass/centurion-rtl.sass
+++ b/sass/centurion-rtl.sass
@@ -4,7 +4,7 @@
  *  Centurion Framework v 3.3 - Right-to-Left Stylesheet
  *  Created by: Justin Hough
  *
- *  Documentation: http://jhough10.github.com/Centurion/documentation.html
+ *  Documentation: http://jhough10.github.com/Centurion/get-started.html
  *  Licensed under GPL and MIT.
  *
  * -------------------------------------------------------- */
@@ -29,7 +29,7 @@ $lang-back: left
 @include grid-generate
 
 /* Centering Grid */
-@include centerGrid
+@include center-grid
 
 /* Clearfix */
 @include clearfix
