--- a/sass/centurion-ie-rtl.sass
+++ b/sass/centurion-ie-rtl.sass
@@ -4,7 +4,7 @@
  *  Centurion Framework v 3.3 - IE Right-to-Left Stylesheet
  *  Created by: Justin Hough
  *
- *  Documentation: http://jhough10.github.com/Centurion/documentation.html
+ *  Documentation: http://jhough10.github.com/Centurion/get-started.html
  *  Licensed under GPL and MIT.
  *
  * -------------------------------------------------------- */
@@ -30,7 +30,7 @@ $lang-back: left
 @include grid-generate
 
 /* Centering Grid */
-@include centerGrid
+@include center-grid
 
 /* Clearfix */
 @include clearfix
