--- a/sass/centurion-ie.sass
+++ b/sass/centurion-ie.sass
@@ -4,7 +4,7 @@
  *  Centurion Framework v 3.3 - IE Stylesheet
  *  Created by: Justin Hough
  *
- *  Documentation: http://jhough10.github.com/Centurion/documentation.html
+ *  Documentation: http://jhough10.github.com/Centurion/get-started.html
  *  Licensed under GPL and MIT.
  *
  * -------------------------------------------------------- */
@@ -28,7 +28,7 @@ $ie7-support: true
 @include grid-generate
 
 /* Centering Grid */
-@include centerGrid
+@include center-grid
 
 /* Clearfix */
 @include clearfix
