--- a/sass/centurion.sass
+++ b/sass/centurion.sass
@@ -4,7 +4,7 @@
  *  Centurion Framework v 3.3
  *  Created by: Justin Hough
  *
- *  Documentation: http://jhough10.github.com/Centurion/documentation.html
+ *  Documentation: http://jhough10.github.com/Centurion/get-started.html
  *  Licensed under GPL and MIT.
  *
  * -------------------------------------------------------- */
@@ -26,7 +26,7 @@
 @include grid-generate
 
 /* Centering Grid */
-@include centerGrid
+@include center-grid
 
 /* Clearfix */
 @include clearfix
