--- a/sass/fluid.sass
+++ b/sass/fluid.sass
@@ -4,7 +4,7 @@
  *  Centurion Framework v 3.1 - FLUID
  *  Created by: Justin Hough
  *
- *  Documentation: http://jhough10.github.com/Centurion/documentation.html
+ *  Documentation: http://jhough10.github.com/Centurion/get-started.html
  *  Licensed under GPL and MIT.
  *
  * -------------------------------------------------------- */
@@ -12,7 +12,7 @@
 /* Desktop/Tablet Fluid Grid Layout - 92% */
 @include grid-generate(98%)
 
-@include centerGrid
+@include center-grid
 
 /* Clearfix */
 @include clearfix
