--- a/css/centurion-ie-rtl.css
+++ b/css/centurion-ie-rtl.css
@@ -7,7 +7,7 @@ body {
  *  Centurion Framework v 3.3 - IE Right-to-Left Stylesheet
  *  Created by: Justin Hough
  *
- *  Documentation: http://jhough10.github.com/Centurion/documentation.html
+ *  Documentation: http://jhough10.github.com/Centurion/get-started.html
  *  Licensed under GPL and MIT.
  *
  * -------------------------------------------------------- */
@@ -445,7 +445,7 @@ body {
   *right: expression(Math.floor(0.66667 * (this.parentNode.offsetWidth - parseFloat(this.parentNode.currentStyle.paddingLeft) - parseFloat(this.parentNode.currentStyle.paddingRight))) + "px");
   /* IE7 */
 }
-.container .centerGrid {
+.container .center-grid {
   display: block;
   float: none;
   margin-left: auto;
@@ -496,7 +496,7 @@ body {
   .container .push-75 {
     right: 75%;
   }
-  .container .centerGrid {
+  .container .center-grid {
     display: block;
     float: none;
     margin-left: auto;
@@ -534,7 +534,7 @@ body {
   }
 }
 /* Centering Grid */
-.centerGrid {
+.center-grid {
   display: block;
   float: none;
   margin-left: auto;
