Fixed hide on desktop and mobile issue

--- a/sass/centurion.sass
+++ b/sass/centurion.sass
@@ -9,17 +9,7 @@
  *
  * -------------------------------------------------------- */
 
-%show-block
-  display: block
 
-%hide-block
-  display: none
-
-.hide-desktop
-  @extend %hide-block
-
-.hide-mobile
-  @extend %show-block
   
 
 /*   GRID  */
@@ -74,6 +64,17 @@
 @include extendables
 
 /* Print */
-@media print
-  a[href]:after
-    content: " (" attr(href) ") "
+@include print
+    
+%show-block
+  display: block
+
+%hide-block
+  display: none
+
+.hide-desktop
+  @extend %hide-block
+
+.hide-mobile
+  @extend %show-block
+    
