--- a/sass/core/_mixins.sass
+++ b/sass/core/_mixins.sass
@@ -48,23 +48,23 @@
 // Show and Hide Elements within Grid
 @mixin hide-desktop
   .hide-desktop
-    display: none
+    display: none !important
   .hide-mobile
-    display: block
+    display: block !important
 
 @mixin hide-mobile
   .hide-desktop
-    display: block
+    display: block !important
   .hide-mobile
-    display: none
+    display: none !important
 
 @mixin show-mobile
   .show-mobile
-    display: block
+    display: block !important
 
 @mixin show-desktop
   .show-desktop
-    display: block
+    display: block !important
 
 
 
